src/assets/styles/index.scss
@import "./web3-onboard/custom-style.scss";

@import "./reset";

@import "./colors.scss";

@import "./variables";

@import "./root.scss";

@import "./ui/button";

html,
body {
  background: var(--#{$prefix}main-background) !important;
  font-size: var(--#{$prefix}default-fs);
}

.app-wrap {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;

  &__layout {
    flex-basis: 100%;

    padding: 20px 0;
    margin: 0 10%;
    // margin-left: 260px;

    height: calc(100vh - 80px);
  }
}

